--- a/login.html
+++ b/login.html
@@ -13,24 +13,31 @@
       align-items: center;
       height: 100vh;
       margin: 0;
+      overflow: hidden;
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.9); /* Semi-transparent white for readability */
+      background: rgba(255, 255, 255, 0.95);
       padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
-      width: 320px;
+      border-radius: 15px;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+      width: 330px;
+      animation: zoomIn 1s ease;
+      transition: all 0.3s ease-in-out;
     }
 
     h2 {
       text-align: center;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      font-size: 24px;
+      color: #333;
+      animation: fadeInUp 0.6s ease forwards;
     }
 
     form {
       display: none;
       flex-direction: column;
+      animation: fadeSlide 0.5s ease forwards;
     }
 
     form.active {
@@ -39,23 +46,33 @@
 
     input {
       margin: 10px 0;
-      padding: 10px;
+      padding: 12px;
       border: 1px solid #ccc;
-      border-radius: 5px;
+      border-radius: 6px;
+      font-size: 15px;
+      transition: box-shadow 0.3s;
+    }
+
+    input:focus {
+      box-shadow: 0 0 8px #007bff;
+      outline: none;
     }
 
     button {
-      padding: 10px;
+      padding: 12px;
       background-color: #007bff;
       border: none;
       color: white;
-      border-radius: 5px;
+      font-size: 16px;
+      border-radius: 6px;
       cursor: pointer;
       margin-top: 10px;
+      transition: transform 0.3s ease, background-color 0.3s ease;
     }
 
     button:hover {
       background-color: #0056b3;
+      transform: scale(1.05);
     }
 
     .toggle-link {
@@ -64,6 +81,45 @@
       cursor: pointer;
       color: #007bff;
       text-decoration: underline;
+      transition: color 0.3s;
+    }
+
+    .toggle-link:hover {
+      color: #0056b3;
+    }
+
+    /* Keyframes for Animations */
+    @keyframes zoomIn {
+      0% {
+        transform: scale(0.8);
+        opacity: 0;
+      }
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    @keyframes fadeSlide {
+      0% {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes fadeInUp {
+      0% {
+        opacity: 0;
+        transform: translateY(15px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
   </style>
 </head>
@@ -129,5 +185,3 @@
   </script>
 </body>
 </html>
-<!-- End of login.html -->
-<!-- This file is for user login and signup functionality. -->  
