--- a/Public/login.html
+++ b/Public/login.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Login & Signup</title>
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
